# media-service-upnp

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  bootstrap-configure  configure.ac  media-service-upnp.conf  media-service-upnp.conf.in  media-service-upnp.pc.in
doc/: API.txt  TODO.txt  coding-style.txt  logging.txt
m4/: compiler-flags.m4  log.m4
src/: async.c  async.h  chain-task.c  chain-task.h  client.h  com.intel.media-service-upnp.service.in  device.c  device.h  error.c  error.h  interface.h  log.c  log.h  media-service-upnp.c  media-service-upnp.h  path.c  path.h  props.c  props.h  search.c  search.h  settings.c  settings.h  sort.c  sort.h  task-atom.h  task-processor.c  task-processor.h  task.c  task.h  upnp.c  upnp.h
test/: dms-info.c  mediaconsole.py  monitor_contents_changes.py  monitor_upload_update.py  stress-test.py  test_lost_client.py
